examples/k8/ingress-app.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackathon
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /podinfo
        backend:
          service:
            name: podinfo
            port:
              number: 9898
        pathType: Prefix
      - path: /nginx
        backend:
          service:
            name: nginx
            port:
              number: 80
        pathType: Prefix
      - path: /gates-server
        backend:
          service:
            name: gates-server
            port:
              number: 80
        pathType: gates-server
