examples/k8/registergateweekhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: gates-admission-webhook
  annotations:
    #cert-manager.io/inject-ca-from: default/client
webhooks:
  - name: gates.admission.webhook
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    clientConfig:
      service:
        namespace: gates
        name: gates-server
        path: /api/admissionwebhook
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR5ekNDQXJPZ0F3SUJBZ0lVTGU4cURFMzhaTWhReVl3WGUvNGJkc1Eza0Jvd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2RURUxNQWtHQTFVRUJoTUNTVTR4Q3pBSkJnTlZCQWdNQWtsT01Rc3dDUVlEVlFRSERBSkpUakVMTUFrRwpBMVVFQ2d3Q1NVNHhDekFKQmdOVkJBc01Ba2xPTVI4d0hRWURWUVFEREJabllYUmxjeTF6WlhKMlpYSXVaMkYwClpYTXVjM1pqTVJFd0R3WUpLb1pJaHZjTkFRa0JGZ0pKVGpBZUZ3MHlNekEzTWpneU1qVTJNVEJhRncwek16QTMKTWpVeU1qVTJNVEJhTUhVeEN6QUpCZ05WQkFZVEFrbE9NUXN3Q1FZRFZRUUlEQUpKVGpFTE1Ba0dBMVVFQnd3QwpTVTR4Q3pBSkJn [...]
    sideEffects: None
    admissionReviewVersions: ["v1"]
